Added website html,css and js

--- a/Project/devsoft-project/site/stylesheets/main.css
+++ b/Project/devsoft-project/site/stylesheets/main.css
@@ -1,7 +1,7 @@
 /* ==========================================================================
    External fonts
    ========================================================================== */
-@import url('http://fonts.googleapis.com/css?family=Open+Sans|Loved+by+the+King');
+@import url('http://fonts.googleapis.com/css?family=Open+Sans|Loved+by+the+King|Lato|Aller|Chunkfive');
 
 /* ==========================================================================
    Other CSS files
@@ -10,11 +10,27 @@
 @import "example.css";
 
 /* ==========================================================================
+   Bootstrap CSS
+   ========================================================================== */
+
+/* Extra small devices (phones, less than 768px) */
+/* No media query since this is the default in Bootstrap */
+
+/* Small devices (tablets, 768px and up) */
+@media (min-width: @screen-sm-min) { ... }
+
+/* Medium devices (desktops, 992px and up) */
+@media (min-width: @screen-md-min) { ... }
+
+/* Large devices (large desktops, 1200px and up) */
+@media (min-width: @screen-lg-min) { ... }
+
+/* ==========================================================================
    Layout
    ========================================================================== */
 
 body {
-  padding-top: 50px;
+  padding-top: 0px;
   padding-bottom: 20px;
 }
 
