--- a/Project/devsoft-project/site/stylesheets/example.css
+++ b/Project/devsoft-project/site/stylesheets/example.css
@@ -1,32 +1,118 @@
 header {
-  font-family: 'Loved by the King', 'cursive';
-  margin-bottom: 20px;
+  font-family: 'Arial', 'cursive';
+  margin-bottom: 5px;
   text-align: center;
+
+  /* Correct Bootstrap bug (horizontal bar) */
+  padding: 0 15px;   margin-left: 0px;   margin-right: 0px;
 }
+
 
 header h1 {
   /* Default color format: RGB in hexa (RRGGBB); */
-  color: #6176AC;
-  font-size: 60px;
+  color: rgba(97, 118, 172, .7);
+  font-size: 34px;
+  text-align:left;
+}
+
+header h3 {
+   /* The RGBA format allows us to specify a transparency level */
+  color: rgba(35, 69, 103, 0.4);
+  font-size: 18px;
+  text-align:right;
 }
 
 header h2 {
   /* The RGBA format allows us to specify a transparency level */
   color: rgba(35, 69, 103, 0.4);
-  font-size: 40px;
+  font-size: 2px;
 }
 
 #main-content {
-  text-align: center;
+  text-align: left;
+  padding:15px 30px;
+  margin:0;
+  border-right: solid 1px #000;
+  min-height: 300px;
+  font-family:Lato;
 }
 
-#main-content i {
-  color: #03A2B8;
-  font-size: 340px;
+
+header hr.sep {
+  text-align: center;
+  border-color: rgba( 160,160,160, .2);
+  width:95%;
+  margin-top:0;
+  margin-bottom:0;
+
+}
+
+header nav {
+  margin-top:10px;
+  border-top: solid 1px rgba( 160,160,160, .2);
+  border-bottom: solid 1px rgba( 160,160,160, .2);
+
+}
+
+.item-menu {
+   background-color: rgba(100,100,100, .02);
+  cursor:pointer;
+  padding-top:18px;
+  padding-bottom:18px;
+  border-right: solid 1px rgba(0,0,200, .05);
+  border-left: solid 1px rgba(0,0,200, .05);
+  color: rgba(40, 90, 172, .6);
+}
+
+.item-menu:hover {
+  background-color: rgba( 200,0,0, .2);
+}
+
+div.item-selecionado {
+  background-color: rgba(97, 118, 172, .8);
+  color:#fff;
+  font-weight: bold;
+}
+
+div.item-selecionado:hover {
+  background-color: rgba(97, 118, 172, .8);
+  color:#fff;
+  font-weight: bold;
+}
+
+.item-menu a {
+  text-decoration: none;
+  color:inherit;
+}
+.item-menu a:hover {
+  text-decoration: none;
+  color:inherit;
+}
+
+.primeiro-menu{
+  border-left:0;
+}
+
+.ultimo-menu{
+  border-right:0;
+}
+
+
+#main-content h2
+{
+  font-size:26px;
 }
 
 .welcome {
   color: rgba(223, 32, 78, 1);
   font-family: 'Open Sans', 'sans-serif';
   font-size: 25px;
+}
+
+
+footer {
+  font-family: Lato;
+  text-align:center;
+  padding: 5px 15px;   margin-left: 0px;   margin-right: 0px;
+  border-top: solid 1px rgba(97, 118, 172, .3);
 }
